[package]
name = "dm-nuker"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
